 * Add two samples Kolmogorov test
 * Improved the speed of many algorithms based on method binding
 * Added more options to control LHSExperiment and LowDiscrepancyExperiment
 * Improved the IntervalMesher class: now it takes into account the diamond flag
 * Shortened ResourceMap keys to not contain 'Implementation'

=== Bug fixes ===
 * #565 (The SensitivityAnalysis class manages only one single output.)
 * #604 (Bug concerning the NonCentralStudent distribution)
 * #698 (KernelSmoothing() as a factory)
 * #786 (Bug in sensitivity analysis)
 * #802 (Python issue with ComplexMatrix::solveLinearSystem)
 * #803 (prefix openturns includes)
 * #813 (Error when multiplying a Matrix by a SymmetricMatrix)
 * #815 (ConditionedNormalProcess test fails randomly)
 * #820 (Python distribution fails randomly when computing the PDF over a sample)
 * #822 (Incorect Matrix / point operations with cast)
 * #824 (Confusing behavior of NumericalSample::sort)
 * #828 (ImportFromCSVFile fails on a file created by exportToCSVFile)
 * #830 (more optim algos examples)
 * #831 (Missing get/setParameter in OpenTURNSPythonFunction)
 * #837 (TruncatedDistribution::setParameter segfaults)
 * #838 (Symmetry of SymmetricMatrix not always enforced)
 * #840 (Remove WeightedExperiment::getWeight)
 * #841 (Better CovarianceModelCollection in Python)
 * #842 (Better ProcessCollection in Python)
 * #843 (Remove all the specific isCopula() methods)
 * #845 (Wrong comparison operator for interface classes with derivative implementation classes)
 * #849 (Ambiguous NumericalSample::computeQuantile)

== 1.7 release (2016-01-27) == #release-1.7

=== Library ===

==== Major changes ====
 * Optimization API rework
 * New parametrization of covariance models
 * Changed behaviour of ExponentialCauchy
 * KrigingAlgorithm rework

==== New classes ====
 * OptimizationSolver, OptimizationProblem
 * SLSQP, LBFGS, NelderMead optimization algorithms from NLopt
 * DiracCovarianceModel, TensorizedCovarianceModel